<resources>
    <string name="app_name">Petugas</string>
    <string name="title_activity_push_notification">PushNotificationActivity</string>
    <string name="loading">Loading…</string>
    <string name="image_from_firebase">Image from firebase</string>
    <string name="judul">Judul</string>
    <string name="pesan">Keterangan</string>
    <string name="kirim">Kirim</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to activity_login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="oke">OK</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="action_settings">Settings</string>
    <string name="siaga">Siaga</string>
    <string name="siap">Siap</string>
    <string name="ancur">Ancur</string>
    <string name="status">Status</string>
    <string name="keterangan">Keterangan</string>
</resources>
