<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PushNotificationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/pushnotif_toolbar"
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/notificationImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="4dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/pushnotif_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/pushnotif_radiobutton_siaga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/siaga"
                    android:textSize="14sp"
                    android:theme="@style/RadioButton" />

                <RadioButton
                    android:id="@+id/pushnotif_radiobutton_siap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/siap"
                    android:textSize="14sp"
                    android:theme="@style/RadioButton" />

                <RadioButton
                    android:id="@+id/pushnotif_radiobutton_awas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="Awas"
                    android:textSize="14sp"
                    android:theme="@style/RadioButton" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/keterangan"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/notificationMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_background"
                android:gravity="top"
                android:hint="@string/pesan"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:minLines="5"
                android:padding="4dp"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/notificationSend"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/kirim" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>